[Back-end]:updated all user management function( not include front-end data type fix)

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -319,7 +319,7 @@
                     <div class="col-md-6, g-signin3"><a th:href="@{/loginadmin}">login by admin</a></div>
                 </div>
                 <div class="font">
-                    Don't have an account? <a th:href="@{/register}" class="color">Register here</a>
+                    Don't have an account? <a href="register.html" class="color">Register here</a>
                 </div>
             </form>
         </div>
