[front-end][back-end] connect admin backend to frontend part1 (flow screen) 1:20p.m 29/10/23

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -316,7 +316,7 @@
                     OR
                 </div>
                 <div class="flexing">
-                    <div class="col-md-6, g-signin3"><a th:href="@{/loginadmin}">login by admin</a></div>
+                    <div class="col-md-6, g-signin3"><a href="loginadmin">login by admin</a></div>
                 </div>
                 <div class="font">
                     Don't have an account? <a href="register.html" class="color">Register here</a>
